<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.uni_stuttgart.informatik.sopra.sopraapp.ChangePasswordFragment"
    android:background="@color/white">
    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="36dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:fitsSystemWindows="true"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/pw_old"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:hint="@string/current_password" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/pw_new1"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:hint="@string/new_password" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/pw_new2"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:imeActionId="@+id/changePW"
            android:layout_gravity="center_horizontal"
            android:hint="@string/confirm_new_password" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/change_pw__button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp"
            android:padding="12dp"
            android:background="@color/colorAccent"
            android:text="@string/change_password_button_text" />
    </LinearLayout>
</ScrollView>
</FrameLayout>
