...

    /*menu item names*/
    <string name="item_start">Start</string>
    <string name="item_feld">Felder</string>
    <string name="item_dmg">Schadensmeldungen</string>
    <string name="item_contract">Verträge</string>
    <string name="item_acc">Account</string>
    <string name="item_app">Über Conserve</string>
    <string name="item_help">Hilfe</string>
    <string name="item_logout">Logout</string>


    /*strings relating to FeldFragment*/
...
